--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Generate Skedula grade CSVs from DeltaMath XLSXs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/jcsicsek/delta_skedula_ingestor/issues"
   },
-  "homepage": "https://github.com/jcsicsek/delta_skedula_ingestor#readme"
+  "homepage": "https://github.com/jcsicsek/delta_skedula_ingestor#readme",
+  "dependencies": {
+    "csv": "^6.0.4",
+    "node-xlsx": "^0.17.2"
+  }
 }
