--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jcsicsek/delta_skedula_ingestor#readme",
   "dependencies": {
     "csv": "^6.0.4",
+    "csv-load-sync": "^2.3.1",
     "lodash": "^4.17.21",
     "node-xlsx": "^0.17.2"
   }
