skedula generator works, writes output to CSVs

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ student_name_overrides.json
 assignment_name_mappings.json
 delta_input/
 skedula_output/
-skedula_templates/
 period_mappings.json
-
+period_templates/
+.DS_Store
