--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 node_modules/
 student_name_overrides.json
-assignment_name_mappings.json
 delta_input/*
+!delta_input/.gitkeep
 skedula_output/*
+!skedula_output/.gitkeep
 period_mappings.json
 period_templates/*
 !period_templates/pdx.csv.sample
